--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "postcss-loader": "^8.1.1",
     "tailwindcss": "^4.1.4",
     "typescript": "^5"
   }
