--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "file-saver": "^2.0.5",
+    "firebase": "^11.6.1",
+    "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -23,6 +25,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
+    "rimraf": "^5.0.10",
     "tailwindcss": "^4.1.4",
     "typescript": "^5"
   }
